--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,17 +3,58 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
+        <title>{{ site.name }}</title>
         <meta name="viewport" content="width=device-width">
 
         <!-- Custom CSS -->
+        <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="assets/css/main.css">
 
     </head>
     <body>
-        <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-
+      <header role="banner">
+        <svg id="check" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" width="100px" height="100px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
+          <g id="Captions"></g>
+          <g id="Your_Icon">
+            <path class="icon" d="M1,52.067c0,0,25.368,31.711,31.711,46.933C50.469,50.8,98.669,2.6,98.669,2.6S73.3,20.358,32.71,71.095L1,52.067z"/>
+          </g>
+        </svg>
+        <h1 class="title">{{ site.name }}</h1>
+        <svg version="1.1" id="mw-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" preserveAspectRatio="xMinYMin meet">
+          <path d="M256.768,0C114.944,0,0,114.944,0,256.768c0,141.824,114.944,256.768,256.768,256.768
+            c141.824,0,256.769-114.944,256.769-256.768C513.536,114.944,398.592,0,256.768,0z M388.096,206.336
+            c0,17.92-14.336,32.256-32.256,32.256c-17.664,0-32.256-14.336-32.256-32.256c0-17.664,14.592-32.256,32.256-32.256
+            S388.096,188.416,388.096,206.336z M250.368,175.872c9.983-5.632,18.176-14.592,22.527-26.368c4.097-11.776,3.84-23.808-0.256-34.56
+            l-2.048-5.632c-2.304-6.656-2.304-14.336,0.256-21.504c6.145-16.896,24.576-25.344,41.216-19.2l0,0
+            c16.641,6.144,25.345,24.576,19.2,41.216c-2.815,7.168-7.68,12.8-13.824,16.64l-5.12,2.816
+            c-9.983,5.632-18.176,14.848-22.527,26.368s-3.84,23.808,0.256,34.56l2.048,5.632c2.304,6.656,2.304,14.336-0.256,21.504
+            c-6.144,16.64-24.576,25.344-41.216,19.2c-16.641-6.144-25.344-24.576-19.2-41.216c2.56-7.168,7.424-13.056,13.568-16.64
+            L250.368,175.872z M137.728,195.328c2.561-7.168,7.424-13.056,13.568-16.64l5.12-2.816c9.983-5.632,18.176-14.592,22.527-26.368
+            c4.097-11.776,3.841-23.808-0.256-34.56l-2.048-5.632c-2.304-6.656-2.304-14.336,0.256-21.504
+            c6.145-16.896,24.576-25.344,41.217-19.2l0,0c16.64,6.144,25.344,24.576,19.199,41.216c-2.815,7.168-7.68,12.8-13.823,16.64
+            l-5.12,2.816c-9.984,5.632-18.177,14.848-22.528,26.368s-3.84,23.808,0.256,34.56l2.048,5.632
+            c2.305,6.656,2.305,14.336-0.256,21.504c-6.144,16.64-24.576,25.344-41.216,19.2C140.288,230.4,131.584,211.968,137.728,195.328z
+             M135.68,306.176c0-17.92,14.336-32.256,32.256-32.256c17.664,0,32.257,14.336,32.257,32.256c0,17.664-14.593,32.256-32.257,32.256
+            S135.68,324.096,135.68,306.176z M273.408,336.896c-9.984,5.632-18.177,14.592-22.528,26.367
+            c-4.096,11.776-3.84,23.809,0.256,34.561l2.048,5.632c2.304,6.656,2.304,14.336-0.256,21.504
+            c-6.144,16.896-24.576,25.344-41.216,19.2l0,0c-16.64-6.145-25.344-24.576-19.2-41.216c2.816-7.168,7.68-12.801,13.824-16.641
+            l5.12-2.815c9.983-5.633,18.176-14.849,22.527-26.368c4.353-11.521,3.84-23.809-0.256-34.561l-2.048-5.632
+            c-2.304-6.656-2.304-14.336,0.256-21.504c6.145-16.64,24.576-25.344,41.216-19.2c16.641,6.144,25.345,24.576,19.2,41.215
+            c-2.56,7.169-7.424,13.057-13.567,16.641L273.408,336.896z M386.304,317.184c-2.56,7.168-7.424,13.057-13.568,16.641l-5.119,2.815
+            c-9.984,5.632-18.177,14.593-22.528,26.368c-4.096,11.776-3.84,23.809,0.256,34.561l2.048,5.632
+            c2.305,6.656,2.305,14.336-0.256,21.504c-6.144,16.896-24.576,25.344-41.216,19.2l0,0c-16.64-6.145-25.344-24.576-19.2-41.217
+            c2.816-7.168,7.68-12.8,13.824-16.64l5.12-2.815c9.983-5.633,18.176-14.849,22.527-26.368c4.097-11.521,3.841-23.809-0.256-34.561
+            l-2.048-5.632c-2.304-6.656-2.304-14.336,0.256-21.504c6.145-16.64,24.576-25.344,41.217-19.2
+            C383.744,282.112,392.448,300.544,386.304,317.184z"></path>
+        </svg>
+      </header>
+      <main role="main">
         {{ content }}
-
+      </main>
+      <footer role="contentinfo">
+        <p><a href="http://github.com/jonespen/{{ site.id }}"><i>Fork me at GitHub</i></a></p>
+      </footer>
+      <script src="components/jquery/jquery.min.js"></script>
+      <script src="assets/js/main.js"></script>
     </body>
 </html>
